--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <html>
-  <head>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
-    <script src="main.js"></script>
-    <script src="bird.js"></script>
-    <script src="pipe.js"></script>
-  </head>
-  <body style="margin: 0;">
-    <main>
-    </main>
-  </body>
+
+<head>
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
+  <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+  <script src="bird.js"></script>
+  <script src="pipe.js"></script>
+  <script src="ga.js"></script>
+  <script src="main.js"></script>
+</head>
+
+<body style="margin: 0;">
+  <main>
+  </main>
+</body>
+
 </html>
